--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>AdvanceKeep</title>
+  <meta name="description" content="AdvanceKeep - 구글 킵 스타일의 직관적인 웹 메모 애플리케이션. 메모, 체크리스트, 라벨 관리, 로컬 백업 기능을 제공합니다." />
+  <meta name="keywords" content="메모, 노트, 체크리스트, AdvanceKeep, Note, Keep, Backup, Restore" />
+
+  <!-- Open Graph / Facebook / Kakao -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://advancekeep.web.app/" />
+  <meta property="og:title" content="AdvanceKeep - 당신의 생각을 정리하세요" />
+  <meta property="og:description" content="직관적인 인터페이스, 강력한 메모 관리. 지금 바로 시작하세요." />
+  <meta property="og:image" content="/favicon.svg" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary" />
+  <meta property="twitter:title" content="AdvanceKeep" />
+  <meta property="twitter:description" content="직관적인 인터페이스, 강력한 메모 관리. 지금 바로 시작하세요." />
+  <meta property="twitter:image" content="/favicon.svg" />
 </head>
 
 <body>
