--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- Open Graph / Facebook / Kakao -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://advancekeep.web.app/" />
+  <meta property="og:url" content="https://advancekeep-1e051.web.app/" />
   <meta property="og:title" content="AdvanceKeep - 당신의 생각을 정리하세요" />
   <meta property="og:description" content="직관적인 인터페이스, 강력한 메모 관리. 지금 바로 시작하세요." />
   <meta property="og:image" content="/favicon.svg" />
