--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="icon" type="image/png" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>AdvanceKeep</title>
   <meta name="description" content="AdvanceKeep - 구글 킵 스타일의 직관적인 웹 메모 애플리케이션. 메모, 체크리스트, 라벨 관리, 로컬 백업 기능을 제공합니다." />
@@ -14,13 +14,13 @@
   <meta property="og:url" content="https://advancekeep-1e051.web.app/" />
   <meta property="og:title" content="AdvanceKeep - 당신의 생각을 정리하세요" />
   <meta property="og:description" content="직관적인 인터페이스, 강력한 메모 관리. 지금 바로 시작하세요." />
-  <meta property="og:image" content="/favicon.svg" />
+  <meta property="og:image" content="/favicon.png" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary" />
   <meta property="twitter:title" content="AdvanceKeep" />
   <meta property="twitter:description" content="직관적인 인터페이스, 강력한 메모 관리. 지금 바로 시작하세요." />
-  <meta property="twitter:image" content="/favicon.svg" />
+  <meta property="twitter:image" content="/favicon.png" />
 </head>
 
 <body>
